--- a/src/components/social/SocialLinks.astro
+++ b/src/components/social/SocialLinks.astro
@@ -57,16 +57,10 @@ const platforms: SocialPlatform[] = [
 		colorClass: "hover:bg-[#1877F2] hover:text-white",
 	},
 	{
-		href: siteConfig.social.twitter,
-		icon: "fa6-brands:x-twitter",
-		label: ARIA_LABELS.twitter,
-		colorClass: "hover:bg-black hover:text-white",
-	},
-	{
-		href: siteConfig.social.tiktok,
-		icon: "fa6-brands:tiktok",
-		label: ARIA_LABELS.tiktok,
-		colorClass: "hover:bg-black hover:text-white",
+		href: siteConfig.social.whatsapp,
+		icon: "fa6-brands:whatsapp",
+		label: "Message on WhatsApp",
+		colorClass: "hover:bg-[#25D366] hover:text-white",
 	},
 ];
 
